# Better-Teams

./: CMakeLists.txt  README.md  build.bat  main.cpp
client/: CMakeLists.txt  ChatWindow.cpp  ChatWindow.h  LoginWindow.cpp  LoginWindow.h  SessionSelectWindow.cpp  SessionSelectWindow.h  main.cpp
server/: CMakeLists.txt  server.cpp
